# autotrace

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  README.md  TODO
.github/workflows/: btest.yml
cmake/: ExternalPNG.cmake  zlib.cmake
doc/: patchestoming02a.txt
src/: GError.h  atou.c  atou.h  autotrace.c  autotrace.h  callbacks.h  color.c  color.h  curve.c  curve.h  despeckle.c  despeckle.h  epsilon-equal.c  epsilon-equal.h  exception.c  exception.h  filename.c  filename.h  fit.c  fit.h  glibReplacement.h  image-proc.c  image-proc.h  input-bmp.c  input-bmp.h  input-gf.c  input-gf.h  input-magick.c  input-png.c  input-png.h  input-pnm.c  input-pnm.h  input-tga.c  input-tga.h  input.cpp  input.h  logreport.c  logreport.h  main.c  median.c  (+51 more)
src/test_wrapper/: CMakeLists.txt  FittingOptionsTests.cpp  InputOptionsTests.cpp  OutputOptionsTests.cpp  main.cpp
src/wrapper/: Autotrace.cpp  Autotrace.h  CMakeLists.txt  Expected.h  FittingOptions.cpp  FittingOptions.h  FittingOptionsBuidler.cpp  FittingOptionsBuidler.h  InputOptions.cpp  InputOptions.h  InputOptionsBuilder.cpp  InputOptionsBuilder.h  Options.cpp  Options.h  OutputOptions.cpp  OutputOptions.h  OutputOptionsBuilder.cpp  OutputOptionsBuilder.h  autotrace.cpp  autotraceMain.cpp  main.cpp
src/wrapper/Json/: JsonHelper.cpp  JsonHelper.h
tests/: CMakeLists.txt
tests/github-000004/: CMakeLists.txt
tests/github-000008/: CMakeLists.txt
